# distro-rack

./: .gitignore  CMakeLists.txt  ContainerModel.cpp  ContainerModel.h  DistroboxManager.cpp  DistroboxManager.h  ExportableAppsModel.cpp  ExportableAppsModel.h  KnownDistros.cpp  KnownDistros.h  LICENSE  NEWS  README.md  README.zh_CN.md  StateManager.cpp  StateManager.h  TaskModel.cpp  TaskModel.h  TerminalManager.cpp  TerminalManager.h  main.cpp
debian/: changelog  control  copyright  qmldeps.overrides  watch
qml/: ActionButton.qml  ContainerDetails.qml  ContainerList.qml  CreateContainerDialog.qml  ExportableAppsDialog.qml  Main.qml  NoContainersView.qml  SettingsDialog.qml  TaskManagerDialog.qml  TerminalSettingsTab.qml  ThemedIcon.qml
qml/+dde/: Main.qml  ThemedIcon.qml
qml/+kde/: ThemedIcon.qml
translations/: distro-rack_en.ts  distro-rack_zh_CN.ts
